Removed testtemplates Added Procfile for Heroku deplyment Created Campaign template Rerouted startpage to Campaign template

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ application.secret="i`n:HyM]]uhBXJ3l[R0JdOpH9]?v8H7J<J9_;USxpeujIrmo9sgKtD_>qvDV
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="sv"
 
 # Global object class
 # ~~~~~
