--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,6 +45,8 @@ frames.neo4j.properties.file="conf/neo4j.properties"
 frames.neo4j.server.properties.file="conf/neo4j-server.properties"
 frames.neo4j.enable.server=true
 frames.neo4j.dbpath=db
+# Environment override for prod
+#frames.neo4j.dbpath=${?GRAPHENEDB_URL}
 
 # Evolutions
 # ~~~~~
