--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,16 @@ frames.neo4j.dbpath=db
 # You can also configure logback (http://logback.qos.ch/),
 # by providing an application-logger.xml file in the conf directory.
 
+# Mailer
+# -----
+smtp.mock=true
+smtp.host=does.not.exit.yet
+smtp.port=25
+smtp.ssl=no
+smtp.tls=no
+#smtp.user=
+#smtp.password=
+
 # Root logger:
 logger.root=ERROR
 
