DB now works against http-service instead Embryo to AWS S3 file upload Some design to startpage etc.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,8 @@ include "securesocial.conf"
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
 #application.secret="%APPLICATION_SECRET%"
-application.secret="i`n:HyM]]uhBXJ3l[R0JdOpH9]?v8H7J<J9_;USxpeujIrmo9sgKtD_>qvDVLvkb"
+application.secret="i`n:HyM]]uhBXJ32[R0JdOpH9]?v9H7J<J9_;USxpeujIrmo9sgKtD_>qvDVLvkb"
+application.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -53,7 +54,8 @@ application.langs="sv"
 # Mailer
 # -----
 smtp.mock=true
-smtp.host=does.not.exit.yet
+smtp.mock=${?MAIL_SMPT_MOCK}
+smtp.host="does.not.exit.yet"
 smtp.port=25
 smtp.ssl=no
 smtp.tls=no
@@ -69,3 +71,17 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+#AWS S3
+aws.accessKeyId=AKIAIOSFODNN7EXAMPLE
+aws.accessKeyId=${?AWS_ACCESS_KEY}
+aws.secretKey=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+aws.secretKey=${?AWS_SECRET_KEY}
+aws.s3bucket=hdc-web-development-bucket
+aws.s3bucket=${?AWS_S3_BUCKET}
+# Default is s3.amazonaws.com
+# The bucketname will be appended to the dnsname as follows:
+# <aws.s3bucket>.<s3.host>
+s3.host="localhost"
+s3.host=${?AWS_S3_HOST}
+#default is false
+#s3.https=true
