--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,20 +31,6 @@ application.langs="sv"
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
-# Database configuration
-# ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
-
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# evolutionplugin=disabled
 
 # Logger
 # ~~~~~
@@ -53,14 +39,15 @@ application.langs="sv"
 
 # Mailer
 # -----
-smtp.mock=true
-smtp.mock=${?MAIL_SMPT_MOCK}
-smtp.host="does.not.exit.yet"
-smtp.port=25
-smtp.ssl=no
+smtp.mock=false
+smtp.host=smtp.gmail.com
+smtp.port=465
+smtp.ssl=yes
 smtp.tls=no
-#smtp.user=
-#smtp.password=
+smtp.user="homedindingclub@gmail.se"
+smtp.user=${?MAIL_USER}
+smtp.password=${?MAIL_PASSWORD}
+smtp.from="info@homediningclub.se"
 
 # Root logger:
 logger.root=ERROR
@@ -72,16 +59,16 @@ logger.play=INFO
 logger.application=DEBUG
 
 #AWS S3
-aws.accessKeyId=AKIAIOSFODNN7EXAMPLE
+aws.accessKeyId=accessKey
 aws.accessKeyId=${?AWS_ACCESS_KEY}
-aws.secretKey=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+aws.secretKey=secretKey
 aws.secretKey=${?AWS_SECRET_KEY}
 aws.s3bucket=hdc-web-development-bucket
 aws.s3bucket=${?AWS_S3_BUCKET}
 # Default is s3.amazonaws.com
 # The bucketname will be appended to the dnsname as follows:
 # <aws.s3bucket>.<s3.host>
-s3.host="localhost"
-s3.host=${?AWS_S3_HOST}
+#s3.host="localhost"
+#s3.host=${?AWS_S3_HOST}
 #default is false
 #s3.https=true
