Major designoverhaul and connecting secure to custom styles

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -6,26 +6,26 @@ securesocial {
 	#
 	# If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
 	#
-	#bootstrapCssPath="your path"
+	bootstrapCssPath="bootstrap/css/bootstrap.min.css"
 
 
 	#
 	# If enabled, sets the Favicon to display when in SecureSocial pages
 	#
-	#faviconPath="your path"
+	faviconPath="images/favicon.ico"
 
 
 	#
 	# If enabled, sets the path to your copy of JQuery to be used instead of the default one provided by SecureSocial
 	#
-	#jqueryPath="your path"
+	jqueryPath="javascripts/jquery/1.11.1/jquery.min.js"
 
 
 	#
 	# If enabled, injects this Css file into all SecureSocial pages, allowing for minor style customizations
 	# If you want to do major changes, please read about custom templates in SecureSocial
 	#
-	#customCssPath="your path"
+	customCssPath="stylesheets/main.min.css"
 
 	#
 	# Where to redirect the user if SecureSocial can't figure that out from
