--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,12 +39,12 @@ application.langs="sv"
 
 # Mailer
 # -----
-smtp.mock=false
+#smtp.mock=false
 smtp.host=smtp.gmail.com
 smtp.port=465
 smtp.ssl=yes
 smtp.tls=no
-smtp.user="homedindingclub@gmail.se"
+smtp.user="homedindingclub@gmail.com"
 smtp.user=${?MAIL_USER}
 smtp.password=${?MAIL_PASSWORD}
 smtp.from="info@homediningclub.se"
