UserCredentialService sparar ner inloggningsuppgifter. Dock fungerar inte validringen av lösneord.

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -2,6 +2,15 @@
 # SecureSocial 2 Settings
 #####################################################################################
 
+smtp {
+	host=smtp.gmail.com
+	port=25
+	ssl=true
+	user="stallhagen"
+	password=nx724%901Lab
+	from="stallhagen@gmail.com"
+}
+
 securesocial {
 	#
 	# If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
