--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,14 +40,15 @@ application.langs="sv"
 # Mailer
 # -----
 #smtp.mock=false
-smtp.host=smtp.gmail.com
-smtp.port=465
-smtp.ssl=yes
-smtp.tls=no
-smtp.user="homedindingclub@gmail.com"
-smtp.user=${?MAIL_USER}
-smtp.password=${?MAIL_PASSWORD}
-smtp.from="info@homediningclub.se"
+#smtp.host=smtp.gmail.com
+##smtp.port=465
+#smtp.port=25
+#smtp.ssl=yes
+#smtp.tls=no
+#smtp.user="homedindingclub@gmail.com"
+#smtp.user=${?MAIL_USER}
+#smtp.password=${?MAIL_PASSWORD}
+#smtp.from="info@homediningclub.se"
 
 # Root logger:
 logger.root=ERROR
