--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,8 +44,8 @@ smtp.host=smtp.gmail.com
 smtp.port=465
 smtp.ssl=yes
 smtp.tls=no
-smtp.user="homedindingclub@gmail.com"
-smtp.user=${?MAIL_USER}
+smtp.user="homediningclub@gmail.com"
+#smtp.user=${?MAIL_USER}
 smtp.password=${?MAIL_PASSWORD}
 smtp.from="info@homediningclub.se"
 
