Changed design of login-pages Disabled some login-integrations Removed the duplicate configuration of mail

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -2,15 +2,6 @@
 # SecureSocial 2 Settings
 #####################################################################################
 
-smtp {
-	host=smtp.gmail.com
-	port=25
-	ssl=true
-	user="stallhagen"
-	password=nx724%901Lab
-	from="stallhagen@gmail.com"
-}
-
 securesocial {
 	#
 	# If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
@@ -118,13 +109,16 @@ securesocial {
 		absoluteTimeOutInMinutes=720
 	}
 
-	twitter {
-		requestTokenUrl="https://twitter.com/oauth/request_token"
-		accessTokenUrl="https://twitter.com/oauth/access_token"
-		authorizationUrl="https://twitter.com/oauth/authenticate"
-		consumerKey=your_consumer_key
-		consumerSecret=your_consumer_secret
-	}
+    # To enable these providers, don't forget to edit play.plugins as well.
+    # --- MW
+
+	#twitter {
+	#	requestTokenUrl="https://twitter.com/oauth/request_token"
+	#	accessTokenUrl="https://twitter.com/oauth/access_token"
+	#	authorizationUrl="https://twitter.com/oauth/authenticate"
+	#	consumerKey=your_consumer_key
+	#	consumerSecret=your_consumer_secret
+	#}
 
 	facebook {
 		authorizationUrl="https://graph.facebook.com/oauth/authorize"
@@ -143,13 +137,13 @@ securesocial {
 		scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
 	}
 
-	linkedin {
-		requestTokenUrl="https://api.linkedin.com/uas/oauth/requestToken"
-		accessTokenUrl="https://api.linkedin.com/uas/oauth/accessToken"
-		authorizationUrl="https://api.linkedin.com/uas/oauth/authenticate"
-		consumerKey=your_consumer_key
-		consumerSecret=your_consumer_secret
-	}
+	#linkedin {
+	#	requestTokenUrl="https://api.linkedin.com/uas/oauth/requestToken"
+	#	accessTokenUrl="https://api.linkedin.com/uas/oauth/accessToken"
+	#	authorizationUrl="https://api.linkedin.com/uas/oauth/authenticate"
+	#	consumerKey=your_consumer_key
+	#	consumerSecret=your_consumer_secret
+	#}
 
 	# LinkedIn OAuth2 sample configuration
 	# Change line in play.plugins from securesocial.core.providers.LinkedInProvider to securesocial.core.providers.LinkedInOAuth2Provider
@@ -160,41 +154,41 @@ securesocial {
 	#	clientSecret=your_client_secret
 	#}
 
-	github {
-		authorizationUrl="https://github.com/login/oauth/authorize"
-		accessTokenUrl="https://github.com/login/oauth/access_token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
-	}
+	#github {
+	#	authorizationUrl="https://github.com/login/oauth/authorize"
+	#	accessTokenUrl="https://github.com/login/oauth/access_token"
+	#	clientId=your_client_id
+	#	clientSecret=your_client_secret
+	#}
 
-	foursquare {
-		authorizationUrl="https://foursquare.com/oauth2/authenticate"
-		accessTokenUrl="https://foursquare.com/oauth2/access_token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
-	}
+	#foursquare {
+	#	authorizationUrl="https://foursquare.com/oauth2/authenticate"
+	#	accessTokenUrl="https://foursquare.com/oauth2/access_token"
+	#	clientId=your_client_id
+	#	clientSecret=your_client_secret
+	#}
 
-	xing {
-		requestTokenUrl="https://api.xing.com/v1/request_token"
-		accessTokenUrl="https://api.xing.com/v1/access_token"
-		authorizationUrl="https://api.xing.com/v1/authorize"
-		consumerKey=your_consumer_key
-		consumerSecret=your_consumer_secret
-	}
+	#xing {
+	#	requestTokenUrl="https://api.xing.com/v1/request_token"
+	#	accessTokenUrl="https://api.xing.com/v1/access_token"
+	#	authorizationUrl="https://api.xing.com/v1/authorize"
+	#	consumerKey=your_consumer_key
+	#	consumerSecret=your_consumer_secret
+	#}
 
-	instagram {
-		authorizationUrl="https://api.instagram.com/oauth/authorize"
-		accessTokenUrl="https://api.instagram.com/oauth/access_token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
-	}
+	#instagram {
+	#	authorizationUrl="https://api.instagram.com/oauth/authorize"
+	#	accessTokenUrl="https://api.instagram.com/oauth/access_token"
+	#	clientId=your_client_id
+	#	clientSecret=your_client_secret
+	#}
 
-	vk {
-		authorizationUrl="http://oauth.vk.com/authorize"
-		accessTokenUrl="https://oauth.vk.com/access_token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
-	}
+	#vk {
+	#	authorizationUrl="http://oauth.vk.com/authorize"
+	#	accessTokenUrl="https://oauth.vk.com/access_token"
+	#	clientId=your_client_id
+	#	clientSecret=your_client_secret
+	#}
 
 	userpass {
 		#
