Testing facebook settings

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -120,12 +120,13 @@ securesocial {
 	#	consumerSecret=your_consumer_secret
 	#}
 
-	facebook {
+    facebook {
 		authorizationUrl="https://graph.facebook.com/oauth/authorize"
 		accessTokenUrl="https://graph.facebook.com/oauth/access_token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
+		clientId=138529211277
+		clientSecret=cf47a9e3b61a61766f2a5093e5419722
 		# this scope is the minimum SecureSocial requires.  You can add more if required by your app.
+        #scope=publish_actions
 		scope=email
 	}
 
