Contentpages rehaul Also test of facebook + google integrations

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -123,8 +123,10 @@ securesocial {
     facebook {
 		authorizationUrl="https://graph.facebook.com/oauth/authorize"
 		accessTokenUrl="https://graph.facebook.com/oauth/access_token"
-		clientId=138529211277
-		clientSecret=cf47a9e3b61a61766f2a5093e5419722
+		clientId=no_key
+		clientSecret=no_key
+		clientId=${?FB_CLIENT_ID}
+		clientSecret=${?FB_CLIENT_SECRET}
 		# this scope is the minimum SecureSocial requires.  You can add more if required by your app.
         #scope=publish_actions
 		scope=email
@@ -133,8 +135,10 @@ securesocial {
 	google {
 		authorizationUrl="https://accounts.google.com/o/oauth2/auth"
 		accessTokenUrl="https://accounts.google.com/o/oauth2/token"
-		clientId=your_client_id
-		clientSecret=your_client_secret
+		clientId=no_key
+		clientSecret=no_key
+		clientId=${?GOOGLE_CLIENT_ID}
+		clientSecret=${?GOOGLE_CLIENT_SECRET}
 		scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
 	}
 
