Moved Fileupload to Edit-mode Improved file upload Delete, still work in progress

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,6 +31,8 @@ application.langs="sv"
 # Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
+#Set Max file size
+parsers.MultipartFormData.maxLength=3072K
 
 # Logger
 # ~~~~~
