1. Stänga av FB och G+

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -120,27 +120,27 @@ securesocial {
 	#	consumerSecret=your_consumer_secret
 	#}
 
-    facebook {
-		authorizationUrl="https://graph.facebook.com/oauth/authorize"
-		accessTokenUrl="https://graph.facebook.com/oauth/access_token"
-		clientId=no_key
-		clientSecret=no_key
-		clientId=${?FB_CLIENT_ID}
-		clientSecret=${?FB_CLIENT_SECRET}
-		# this scope is the minimum SecureSocial requires.  You can add more if required by your app.
-        #scope=publish_actions
-		scope=email
-	}
+#    facebook {
+#		authorizationUrl="https://graph.facebook.com/oauth/authorize"
+#		accessTokenUrl="https://graph.facebook.com/oauth/access_token"
+#		clientId=no_key
+#		clientSecret=no_key
+#		clientId=${?FB_CLIENT_ID}
+#		clientSecret=${?FB_CLIENT_SECRET}
+#		# this scope is the minimum SecureSocial requires.  You can add more if required by your app.
+#        #scope=publish_actions
+#		scope=email
+#	}
 
-	google {
-		authorizationUrl="https://accounts.google.com/o/oauth2/auth"
-		accessTokenUrl="https://accounts.google.com/o/oauth2/token"
-		clientId=no_key
-		clientSecret=no_key
-		clientId=${?GOOGLE_CLIENT_ID}
-		clientSecret=${?GOOGLE_CLIENT_SECRET}
-		scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
-	}
+#	google {
+#		authorizationUrl="https://accounts.google.com/o/oauth2/auth"
+#		accessTokenUrl="https://accounts.google.com/o/oauth2/token"
+#		clientId=no_key
+#		clientSecret=no_key
+#		clientId=${?GOOGLE_CLIENT_ID}
+#		clientSecret=${?GOOGLE_CLIENT_SECRET}
+#		scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
+#	}
 
 	#linkedin {
 	#	requestTokenUrl="https://api.linkedin.com/uas/oauth/requestToken"
