--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -78,34 +78,26 @@ securesocial {
 	# Parameters for the cookie used to track users.
 	#
 	cookie {
-		#
 		# The cookie name (defaults to 'id')
 		name=hdc-login
 
-		#
 		# The path for which the cookie should be sent by the browser (defaults to /)
-		#
 		path=/
 
-		#
+    # Make the cookie persistant
+    makeTransient=false
+
 		# The domain for which the cookie should be sent (it is left empty by default)
-		#
 		#domain=some_domain
 
-		#
 		# If set to true, the cookie is not readable by a client side script (defaults to true).
-		#
 		httpOnly=true
 
-		#
 		# The amount of time the session id will remain valid since the last request
-		#
 		idleTimeoutInMinutes=30
 
-		#
 		# The amount of time the session id will be valid since the user authenticated.
 		# After this the user will need to re-authenticate
-		#
 		absoluteTimeOutInMinutes=720
 	}
 
