- Revert of Profile-check

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -31,7 +31,7 @@ securesocial {
 	# Where to redirect the user if SecureSocial can't figure that out from
 	# the request that led the use to the login page
 	#
-	onLoginGoTo=/profile/verify
+	onLoginGoTo=/
 
 	#
 	# Where to redirect the user when he logs out. If not set SecureSocial will redirect to the login page
@@ -79,7 +79,7 @@ securesocial {
 	#
 	cookie {
 		# The cookie name (defaults to 'id')
-		name=hdc-login
+		#name=hdc-login
 
 		# The path for which the cookie should be sent by the browser (defaults to /)
 		path=/
