--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,15 +41,31 @@ parsers.MultipartFormData.maxLength=3072K
 
 # Mailer
 # -----
-#smtp.mock=false
+
+# Gmail settings, works with username/password
+# Used locally
+smtp.from="info@homediningclub.se"
+
 smtp.host=smtp.gmail.com
 smtp.port=465
 smtp.ssl=yes
 smtp.tls=no
 smtp.user="homediningclub@gmail.com"
-#smtp.user=${?MAIL_USER}
+smtp.password=none
+
+//smtp.host=smtp.fsdata.se
+//smtp.port=587
+//smtp.ssl=no
+//smtp.tls=yes
+//smtp.user="service@homediningclub.se"
+
+smtp.host=${?MAIL_HOST}
+smtp.port=${?MAIL_PORT}
+smtp.ssl=${?MAIL_SSL}
+smtp.tls=${?MAIL_TLS}
+smtp.user=${?MAIL_USER}
 smtp.password=${?MAIL_PASSWORD}
-smtp.from="info@homediningclub.se"
+
 
 # Root logger:
 logger.root=ERROR
