--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -196,6 +196,6 @@ securesocial {
 		enableGravatarSupport=false
 		tokenDuration=60
 		tokenDeleteInterval=5
-		signupSkipLogin=false
+		signupSkipLogin=true
 	}
 }
