- Script include - Start of Recipe rating - Text corrections

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -18,7 +18,7 @@ securesocial {
 	#
 	# If enabled, sets the path to your copy of JQuery to be used instead of the default one provided by SecureSocial
 	#
-	jqueryPath="javascripts/jquery/1.11.1/jquery.min.js"
+	jqueryPath="javascripts/jquery/1.11.1/jquery.1.11.1.min.js"
 
 
 	#
