More support for 2.4 - Change to Embedded Database - Support for transactions - Re-written injection for UserCredentialServicePlugin

--- a/conf/neo4j.conf
+++ b/conf/neo4j.conf
@@ -3,7 +3,7 @@ neo4j.host="http://localhost:7474/db/data"
 neo4j.user="neo4j"
 neo4j.password="neo4j"
 
-neo4j.embeddedDB="../../Neo4j/hdc-web.db"
+neo4j.embeddedDB="..//..//Neo4j//hdc-web.db"
 
 neo4j.host=${?NEO4J_REST_URL}
 neo4j.user=${?NEO4J_LOGIN}
