More support for 2.4 - Fixed Login event listener - First try for lifecycle manager

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,8 @@
 include "securesocial.conf"
 include "neo4j.conf"
 
+play.modules.enabled += "modules.LiceCycleModule"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
