--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,7 @@
 include "securesocial.conf"
 include "neo4j.conf"
 
-play.modules.enabled += "modules.LiceCycleModule"
+play.modules.enabled += "modules.LifeCycleModule"
 
 # Secret key
 # ~~~~~
