- Fixed caching in County and Tagword - Code cleanup in fileservice - Fixed ErrorHandler

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,7 @@ include "securesocial.conf"
 include "neo4j.conf"
 
 play.modules.enabled += "modules.LifeCycleModule"
+play.http.errorHandler = "controllers.ErrorController"
 
 # Secret key
 # ~~~~~
