1. Fixed support for trailing slash on all routes. (example: /auth/login and /auth/login/ now both works) 2. Removed some old unused classes and files 3. Fixed the issue with saving firstName / lastName in UserCredential 4. Removed the firstName and lastName from UserProfile (we should use the ones in UserCredential) migraded the app reading from the correct field 5. Disabled some logging for SecureSocial to make logs more readable 6. Fixed bug in the javascripts when opening an email link to a message 7. Updated the Java.runtime.version config from 7 to 8, this is used by some hosting agents like Heroku, and should be correctly set 8. Renamed the view: "skapa" to the more fitting name "editProfile" 9. Installed support for Bootstrap 3 Form-Field-support (play-bootstrap)

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -86,7 +86,7 @@ play.modules.enabled += "modules.SecureSocialModule"
 		path=/
 
     # Make the cookie persistant
-    makeTransient=false
+    makeTransient=true
 
 		# The domain for which the cookie should be sent (it is left empty by default)
 		#domain=some_domain
