http->https not working

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,3 +94,8 @@ backup.servernameorip="127.0.0.1"
 backup.servernameorip=${?SERVER_NAME_OR_IP}
 backup.dir=/Backup/
 backup.dir=${?SERVER_BACKUP_DIR}
+
+play.http.filters=filters.MyFilters
+
+#play.server.https.keyStore.path=
+#play.server.https.keyStore.password=
