Konfiguration av ssl for securesocial and key and path to cert for https SSL_ON, KEYSTORE_PATH, KEYSTORE_PASSWD SSL_ON true/false - securesocial med https? KEYSTORE_PATH     - https cert keyStore path KEYSTORE_PASSWD - password for keyStore

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -97,5 +97,5 @@ backup.dir=${?SERVER_BACKUP_DIR}
 
 play.http.filters=filters.MyFilters
 
-#play.server.https.keyStore.path=
-#play.server.https.keyStore.password=
+play.server.https.keyStore.path=${?KEYSTORE_PATH}
+play.server.https.keyStore.password=${?KEYSTORE_PASSWD}
