--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -72,7 +72,7 @@ play.modules.enabled += "modules.SecureSocialModule"
 	#
 	# Enable SSL for oauth callback urls, login/signup/password recovery pages and the authenticator cookie
 	#
-	ssl=false
+	ssl=${?SSL_ON}
 
 
 	#
