Konfiguration av ssl for securesocial and key and path to cert for https SSL_ON, KEYSTORE_PATH, KEYSTORE_PASSWD SSL_ON true/false - securesocial med https? KEYSTORE_PATH     - https cert keyStore path KEYSTORE_PASSWD - password for keyStore

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,3 +99,6 @@ play.http.filters=filters.MyFilters
 
 play.server.https.keyStore.path=${?KEYSTORE_PATH}
 play.server.https.keyStore.password=${?KEYSTORE_PASSWD}
+
+
+# end of file ...
