Made sure ssl is disabled locally

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -4,80 +4,52 @@
 play.modules.enabled += "modules.SecureSocialModule"
 
 	securesocial {
-	#
 	# If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
-	#
 	bootstrapCssPath="bootstrap/css/bootstrap.min.css"
 
-
-	#
 	# If enabled, sets the Favicon to display when in SecureSocial pages
-	#
 	faviconPath="images/favicon.ico"
 
-
-	#
 	# If enabled, sets the path to your copy of JQuery to be used instead of the default one provided by SecureSocial
-	#
 	jqueryPath="javascripts/jquery/1.11.1/jquery.1.11.1.min.js"
 
-
-	#
 	# If enabled, injects this Css file into all SecureSocial pages, allowing for minor style customizations
 	# If you want to do major changes, please read about custom templates in SecureSocial
-	#
 	customCssPath="stylesheets/main.min.css"
 
-	#
 	# Where to redirect the user if SecureSocial can't figure that out from
 	# the request that led the use to the login page
-	#
 	onLoginGoTo=/profile/verify
 
-	#
 	# Where to redirect the user when he logs out. If not set SecureSocial will redirect to the login page
-	#
 	onLogoutGoTo=/auth/login
 
-	#
 	# Where to redirect the user when he/she starts the signup process.
 	# If not set SecureSocial will redirect to the login page
-	#
 	#onStartSignUpGoTo=/auth/login
 
-	#
 	# Where to redirect the user when he/she signs up.
 	# If not set SecureSocial will redirect to the login page
-	#
 	#onSignUpGoTo=/auth/login
 
-	#
 	# Where to redirect the user when he starts the password reset process.
 	# If not set SecureSocial will redirect to the login page
-	#
 	#onStartResetPasswordGoTo=/auth/login
 
-	#
 	# Where to redirect the user when he resets his/her password.
 	# If not set SecureSocial will redirect to the login page
-	#
 	#onResetPasswordGoTo=/auth/login
 
-	#
 	# Where to redirect the user when he changes his/her password.
 	# If not set SecureSocial will redirect to the password change page
-	#
 	#onPasswordChangeGoTo=/auth/password
 
-	#
 	# Enable SSL for oauth callback urls, login/signup/password recovery pages and the authenticator cookie
-	#
+  ssl=false
 	ssl=${?SSL_ON}
 
 
-	#
 	# Parameters for the cookie used to track users.
-	#
 	cookie {
 		# The cookie name (defaults to 'id')
 		#name=hdc-login
