Fixed BlogPosts Fixed domainname in configuration for local environment

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -4,6 +4,15 @@
 play.modules.enabled += "modules.SecureSocialModule"
 
 	securesocial {
+
+	# The application host and optional port are used to compute the URLs users are pointed to.
+	# (see RoutesService.Default.absoluteUrl)
+	applicationHost="hdc-web.local"
+	applicationHost=${?APPLICATION_HOST}
+  applicationPort=9000
+  applicationPort=${?APPLICATION_PORT}
+
+
 	# If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
 	bootstrapCssPath="bootstrap/css/bootstrap.min.css"
 
